--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -13,18 +13,18 @@ jobs:
 
     steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v2
 
     - name: Set up Python
-      uses: actions/setup-python@v3
+      uses: actions/setup-python@v2
       with:
-        python-version: '3.8' 
+        python-version: '3.8'
 
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt  # Certifique-se de ter esse arquivo
+        pip install -r requirements.txt
 
     - name: Run tests
       run: |
-     
+        pytest
